# discord-claude

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile.test  README.md  docker-compose.yaml  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt
.claude/: CLAUDE.md
.githooks/: pre-commit
.github/workflows/: main.yml  test.yml
src/: anthropic_api.py  bash_tool.py  bot.py  button_view.py  memory.py  util.py
src/config/: auth.py
src/discord_claude/: __init__.py  bash_tool.py  bot.py  memory.py  util.py
src/discord_claude/cogs/: __init__.py
src/discord_claude/cogs/claude/: __init__.py  attachments.py  chat.py  client.py  cog.py  command_options.py  embeds.py  models.py  paths.py  responses.py  state.py  tool_handlers.py  tool_registry.py  tooling.py  views.py
src/discord_claude/config/: __init__.py  auth.py  mcp.py  pricing.py  pricing.yaml
tests/: conftest.py  test_anthropic_api.py  test_anthropic_api_shim.py  test_bash_tool.py  test_button_view.py  test_choice_caps.py  test_claude_attachments.py  test_claude_chat.py  test_claude_client.py  test_claude_cog.py  test_claude_embeds.py  test_claude_mcp_config.py  test_claude_request_config.py  test_claude_responses.py  test_claude_state.py  test_claude_tool_handlers.py  test_config_auth.py  test_config_pricing.py  test_embed_delivery.py  test_lazy_imports.py  test_logging_setup.py  test_memory.py  test_namespace.py  test_package_import.py  test_tool_registry.py  test_util.py
